fixed trip row spacing in savedTripsView

--- a/src/client/styles/trip-form-output.scss
+++ b/src/client/styles/trip-form-output.scss
@@ -270,14 +270,16 @@
 .trip-dates,
 .trip-city,
 .trip-actions {
-    width: 33%;
-    padding: 0 10px;
     text-align: center;
 }
 
+.trip-city {
+    width: 35%;
+}
+
 .trip-dates {
-    padding-top: 20px;
-    padding-right: 10px;
+    width: 26%;
+    padding-top: 22px;
     background-color: transparent;
     border: none;
     font-family: $plain-font;
@@ -286,7 +288,7 @@
 }
 
 .trip-actions {
-    width: 40%;
+    width: 34%;
     text-align: right;
 }
 
